force-app/main/default/objects/AfterSalesService__c/AfterSalesService__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de gérer plusieurs non-conformité produit</description>
    <label>Dossier SAV</label>
    <nameField>
        <displayFormat>SAV/{YYYY}/{0000000}</displayFormat>
        <label>Numéro SAV</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dossiers SAV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>