force-app/main/default/objects/AfterSalesService__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>AfterSalesServices</relationshipName>
    <type>Lookup</type>
</CustomField>