force-app/main/default/objects/AfterSalesService__c/fields/cancellingDate__c.field-meta.xml
<CustomField>
    <fullName>cancellingDate__c</fullName>
    <description>Date d&apos;annulation, à renseigner pour différencier les clôtures par annulation de dossier</description>
    <label>Date d&apos;annulation</label>
    <type>Date</type>
</CustomField>