force-app/main/default/objects/AfterSalesService__c/fields/closedStatusCaseCount__c.field-meta.xml
<CustomField>
    <fullName>closedStatusCaseCount__c</fullName>
    <label>[#] Nombre de requête clôturée</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>