force-app/main/default/objects/AfterSalesService__c/fields/diagnosticStatusCaseCount__c.field-meta.xml
<CustomField>
    <fullName>diagnosticStatusCaseCount__c</fullName>
    <label>[#] Nombre de requête diagnostiquée</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>