force-app/main/default/objects/AfterSalesService__c/fields/eciTypedNcpCount__c.field-meta.xml
<CustomField>
    <fullName>eciTypedNcpCount__c</fullName>
    <description>Nombre de NCP de type ECI que contient le dossier SAV</description>
    <inlineHelpText>Nombre de NCP de type ECI que contient le dossier SAV</inlineHelpText>
    <label>[#] Nombre de NCP de type ECI</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>