force-app/main/default/objects/AfterSalesService__c/fields/inProgressStatusCaseCount__c.field-meta.xml
<CustomField>
    <fullName>inProgressStatusCaseCount__c</fullName>
    <label>[#] Nombre de requête en cours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>