force-app/main/default/objects/AfterSalesService__c/fields/isLegacy__c.field-meta.xml
<CustomField>
    <fullName>isLegacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vrai si l&apos;enregistrement provient de la GC</description>
    <label>[#] Enregistrement historique</label>
    <type>Checkbox</type>
</CustomField>