force-app/main/default/objects/AfterSalesService__c/fields/legacySource__c.field-meta.xml
<CustomField>
    <fullName>legacySource__c</fullName>
    <label>[#] Source de données historiques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegacySource</valueSetName>
    </valueSet>
</CustomField>