force-app/main/default/objects/AfterSalesService__c/fields/legacyStatus__c.field-meta.xml
<CustomField>
    <fullName>legacyStatus__c</fullName>
    <description>REPRISE HISTO : Statut de la GC</description>
    <label>[#] Statut historique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>