force-app/main/default/objects/AfterSalesService__c/fields/newStatusCaseCount__c.field-meta.xml
<CustomField>
    <fullName>newStatusCaseCount__c</fullName>
    <label>[#] Nombre de requête nouvelle</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>