force-app/main/default/objects/AfterSalesService__c/fields/oldCompositeStatus2__c.field-meta.xml
<CustomField>
    <fullName>oldCompositeStatus2__c</fullName>
    <label>Statut pipeline GC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etat Inconnu</fullName>
            </value>
            <value>
                <fullName>SAV Terminé Refusé</fullName>
            </value>
            <value>
                <fullName>SAV Terminé Non Soldé</fullName>
            </value>
            <value>
                <fullName>SAV Terminé</fullName>
            </value>
            <value>
                <fullName>SAV Non Diagnostiqué Non préparé</fullName>
            </value>
            <value>
                <fullName>SAV Non Diagnostiqué Non programmé</fullName>
            </value>
            <value>
                <fullName>SAV Non Diagnostiqué programmé</fullName>
            </value>
            <value>
                <fullName>SAV Diagnostiqué Non Devisé</fullName>
            </value>
            <value>
                <fullName>SAV Diagnostiqué Non Accepté</fullName>
            </value>
            <value>
                <fullName>SAV Non Commandé Programmé</fullName>
            </value>
            <value>
                <fullName>SAV Non Commandé</fullName>
            </value>
            <value>
                <fullName>SAV Non Confirmé Programmé</fullName>
            </value>
            <value>
                <fullName>SAV Non Confirmé</fullName>
            </value>
            <value>
                <fullName>SAV Non livré Programmé</fullName>
            </value>
            <value>
                <fullName>SAV Non livré Non Programmé</fullName>
            </value>
            <value>
                <fullName>SAV Non livré Non Préparé</fullName>
            </value>
            <value>
                <fullName>SAV Attente d&apos;Intervention programmée</fullName>
            </value>
            <value>
                <fullName>SAV Attente d&apos;Interv Non Programmé</fullName>
            </value>
            <value>
                <fullName>SAV Attente d&apos;Interv Non Préparé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Diagnostiqué Non Préparé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Diagnostiqué Non Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Diagnostiqué Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Commandé Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Commandé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Confirmé Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Confirmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Livré Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Livré Non Programmé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Non Livré Non Préparé</fullName>
            </value>
            <value>
                <fullName>SAV ECI Attente d&apos;Interv programmée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>