force-app/main/default/objects/AfterSalesService__c/fields/oldCompositeStatus__c.field-meta.xml
<CustomField>
    <fullName>oldCompositeStatus__c</fullName>
    <label>Statut pipeline GC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>