force-app/main/default/objects/AfterSalesService__c/fields/stageName__c.field-meta.xml
<CustomField>
    <fullName>stageName__c</fullName>
    <defaultValue>&quot;Enregistrement&quot;</defaultValue>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enregistrement</fullName>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
            </value>
            <value>
                <fullName>Résolution</fullName>
            </value>
            <value>
                <fullName>Clôture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>