force-app/main/default/objects/AfterSalesService__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&quot;Nouveau&quot;</defaultValue>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Diagnostiqué</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>A clôturer</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>