force-app/main/default/objects/AfterSalesService__c/fields/toDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>toDiagnostic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>À diagnostiquer</label>
    <type>Checkbox</type>
</CustomField>