force-app/main/default/objects/AfterSalesService__c/fields/workSite__c.field-meta.xml
<CustomField>
    <fullName>workSite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chantier</label>
    <referenceTo>Chantier__c</referenceTo>
    <relationshipName>AfterSalesServices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>