force-app/main/default/objects/AfterSalesService__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les dossiers SAV</label>
</ListView>