force-app/main/default/objects/AfterSalesService__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>workSite__c</columns>
    <columns>account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>stageName__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>